--- a/signup.html
+++ b/signup.html
@@ -27,7 +27,7 @@
 
 
     <!-- Custom styles for this template -->
-    <link href="css/newsstyles.css" rel="stylesheet">
+    <link href="newsstyles.css" rel="stylesheet">
   </head>
   <body class="text-center">
 
